# AE-buddy

./: .env.example  .gitignore  Motion_Buddy_Quickstart.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.engine.json  tsconfig.json  tsconfig.ui.json  vite.config.ts
after-effects/: export-context.jsx  import-generated-script.jsx
after-effects/cep-extension/: README.md  index.html
after-effects/cep-extension/CSXS/: manifest.xml
after-effects/cep-extension/css/: style.css
after-effects/cep-extension/js/: main.js
after-effects/cep-extension/jsx/: hostscript.jsx
docs/: ae-buddy-vnext-architecture.md  desktop-architecture.md  live-session-awareness.md
examples/: action-plan-examples.json
src/: cli.ts  config.ts  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/ae/: bridge.ts  context.ts
src/cli/: index.ts
src/core/: action-plan-renderer.test.ts  action-plan-renderer.ts  action-plan-schema.ts  action-plan-validator.test.ts  action-plan-validator.ts  generator.ts  openai-generator.ts  planner.ts  rules.ts  run-logger.ts  system-prompt.ts
src/domain/commands/: registry.test.ts  registry.ts
src/domain/context/: context-model.ts
src/domain/persistence/: command-store.test.ts  command-store.ts
src/engine/: config.ts  contracts.ts  node-host.ts  workflow.test.ts  workflow.ts
src/shared/: ae-context.ts  ae-live.test.ts  ae-live.ts  run-files.ts  types.ts
src/ui/: app.tsx  main.tsx  styles.css
src/ui/components/: context-panel.tsx  (+5 more)
(+14 files in other folders)
